# FishBook

./: README.md  app.py  handler.py  http_handler.py  main.py  pyproject.toml  yushu_book.py
app/web/: book.py
