[tool.poetry]
name = "fishbook"
version = "0.1.0"
description = ""
authors = ["Lu Xianghui <xianghui.lu@data-turing.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
requests = "^2.28.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
